--- a/HWCollectionView/Data.plist
+++ b/HWCollectionView/Data.plist
@@ -15,14 +15,14 @@
 	</array>
 	<key>Comment</key>
 	<array>
-		<string>Когда потратил 4 часа на расстановку констрейнтов</string>
-		<string>Ммм... Шаурма:р</string>
-		<string>Когда пришел на собеседование</string>
-		<string>Тру прогер</string>
-		<string>Когда 3 курс узнал, что у 2ого курса физики не будет)</string>
-		<string>Когда тебя просят быть серьезнее, а ты...</string>
-		<string>Ура, новый мак)</string>
-		<string>Когда осознал, что не сможешь подключить флешку без переходника, который стоит 4к рублей</string>
+		<string>Текст1</string>
+		<string>Текст2</string>
+		<string>Текст3</string>
+		<string>Текст4</string>
+		<string>Текст5</string>
+		<string>Текст6</string>
+		<string>Текст7</string>
+		<string>Текст8</string>
 	</array>
 </dict>
 </plist>
